add rows param to /search
